--- a/manifest.json
+++ b/manifest.json
@@ -11,5 +11,6 @@
         }, 
         "default_title": "click to use change options", 
         "default_popup": "popup.html"
-    }
+    }, 
+    "permissions": ["scripting", "storage", "activeTab"]
 }
